tests/rosetta/out/Pascal/bitmap-read-an-image-through-a-pipe.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/bitmap-read-an-image-through-a-pipe.pas
bitmap-read-an-image-through-a-pipe.pas(20,30) Error: Identifier not found "_sliceString"
bitmap-read-an-image-through-a-pipe.pas(37,13) Error: Incompatible types: got "TFPGMap<System.ShortString,System.LongInt>" expected "TFPGMap<System.Variant,System.Variant>"
bitmap-read-an-image-through-a-pipe.pas(40,26) Error: Identifier not found "_sliceString"
bitmap-read-an-image-through-a-pipe.pas(60,11) Error: Identifier not found "_sliceString"
bitmap-read-an-image-through-a-pipe.pas(61,31) Fatal: String exceeds line
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
